--- a/2_CreateReactApp/Sample 2/Todo-App/src/components/css/Header.module.css
+++ b/2_CreateReactApp/Sample 2/Todo-App/src/components/css/Header.module.css
@@ -4,7 +4,7 @@
   height: 100px;
   font-size: 65pt;
   text-align: center;
-  font-family: sans-serif;
+  font-family:'Courier New', Courier, monospace;
   font-weight: bold;
-  border: 2px solid;
+  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.4);
 }
