--- a/2_CreateReactApp/Sample 2/Todo-App/src/components/css/TaskListItem.module.css
+++ b/2_CreateReactApp/Sample 2/Todo-App/src/components/css/TaskListItem.module.css
@@ -14,3 +14,18 @@
 .line {
   border: 1px solid;
 }
+.deleteButton {
+  float: right;
+  margin-right: -100px;
+  padding: 15px 20px;
+  margin-top: -12px;
+  border: none;
+  background-color: red;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 10px;
+}
+.deleteButton:hover {
+  background-color: black;
+  color: white;
+}
